# image-to-human-avatar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
assets/examples/amit/: pose.pose
assets/examples/flux/: pose.pose
assets/examples/stock/: pose.pose
human_avatar/: __init__.py  image_to_avatar.py
